--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-<!-- Barra de navegación -->
+    <!-- Barra de navegación -->
     <nav class="topnav" id="myTopnav">
         <a href="#" class="active">Inicio</a>
         <a href="#">Nosotros</a>
@@ -23,37 +23,39 @@
 
     <section class="hero">
         <div class="hero--contenido">
-        <h1>El mejor viaje de la vida</h1>
-        <h4>Te mereces unas buenas vacaciones</h4>
-        <input class="search" type="text" placeholder="🔎 ¿A dónde deseas viajar?">
-    </div>
+            <h1>El mejor viaje de la vida</h1>
+            <h4>Te mereces unas buenas vacaciones</h4>
+            <input class="search" type="text" placeholder="🔎 ¿A dónde deseas viajar?">
+        </div>
     </section>
 
     <section class="places">
 
         <div class="places--header">
             <h3>Explora el mundo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam facilis ut possimus alias esse doloremque architecto eligendi tempore culpa maxime repudiandae fugiat magnam nesciunt laborum non facere similique, ducimus veniam!</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam facilis ut possimus alias esse
+                doloremque architecto eligendi tempore culpa maxime repudiandae fugiat magnam nesciunt laborum non
+                facere similique, ducimus veniam!</p>
         </div>
 
-            <div class="places--card">
-                <img src="img/alemania.jpg" alt="">
-                <p>Alemania</p>
-                <a href="#">Reserva ahora</a>
-            </div>
-            <div class="places--card">
-                <img src="img/paris.jpg" alt="">
-                <p>Francia</p>
-                <a href="#">Reserva ahora</a>
+        <div class="places--card">
+            <img src="img/alemania.jpg" alt="">
+            <p>Alemania</p>
+            <a href="#">Reserva ahora</a>
+        </div>
+        <div class="places--card">
+            <img src="img/paris.jpg" alt="">
+            <p>Francia</p>
+            <a href="#">Reserva ahora</a>
 
-            </div>
+        </div>
 
-            <div class="places--card">
-                <img src="img/japan.jpg" alt="">
-                <p>Japón</p>
-                <a href="#">Reserva ahora</a>
+        <div class="places--card">
+            <img src="img/japan.jpg" alt="">
+            <p>Japón</p>
+            <a href="#">Reserva ahora</a>
 
-            </div>
+        </div>
     </section>
 
     <section class="diduknow">
@@ -66,12 +68,17 @@
         <div class="diduknow--card">
             <img src="img/italia.jpg" alt="">
             <h4>Italia</h4>
-            <p>Hablando de Romeo y Julieta, han sido pocas las historias que hayan influido y perdurado tanto como la de los protagonistas de esta novela de Shakespeare. Desde entonces Verona es una de las ciudades más románticas de la geografía italiana. 
+            <p>Hablando de Romeo y Julieta, han sido pocas las historias que hayan influido y perdurado tanto como la de
+                los protagonistas de esta novela de Shakespeare. Desde entonces Verona es una de las ciudades más
+                románticas de la geografía italiana.
 
-                Sin embargo, queremos hablar de otra gran historia de amor de la literatura. En este caso, del libro “Una habitación con vistas”, escrito por E. M. Forster y publicado en 1908. En él atendemos a la historia de Lucy, una joven perteneciente a la rígida sociedad de la Inglaterra victoriana que se muda a la bella Firenze... 
-                
-                 </p>
-                 <a href="#">Leer más</a>
+                Sin embargo, queremos hablar de otra gran historia de amor de la literatura. En este caso, del libro
+                “Una habitación con vistas”, escrito por E. M. Forster y publicado en 1908. En él atendemos a la
+                historia de Lucy, una joven perteneciente a la rígida sociedad de la Inglaterra victoriana que se muda a
+                la bella Firenze...
+
+            </p>
+            <a href="#">Leer más</a>
         </div>
     </section>
 
